# TE_Idx

./: .gitignore  Cargo.toml  LICENSE  README.md  prepSeqAndModLen.py  prepSeqMaskModLen.py
src/: idx.rs  lib.rs  main.rs
tests/: gen_test_data.sh  test.rs
tests/.tmplTfzoj/test_ex/masks/: 1.bed.bgz
tests/data/: .tmprNF6AR
tests/data/test_ex/masks/: 1.bed.bgz  10.bed.bgz  100.bed.bgz  101.bed.bgz  102.bed.bgz  103.bed.bgz  104.bed.bgz  105.bed.bgz  106.bed.bgz  107.bed.bgz  108.bed.bgz  109.bed.bgz  11.bed.bgz  110.bed.bgz  111.bed.bgz  112.bed.bgz  113.bed.bgz  114.bed.bgz  115.bed.bgz  116.bed.bgz  117.bed.bgz  118.bed.bgz  119.bed.bgz  12.bed.bgz  120.bed.bgz  121.bed.bgz  122.bed.bgz  123.bed.bgz  124.bed.bgz  126.bed.bgz  127.bed.bgz  128.bed.bgz  129.bed.bgz  13.bed.bgz  130.bed.bgz  131.bed.bgz  132.bed.bgz  133.bed.bgz  134.bed.bgz  135.bed.bgz  (+301 more)
tests/data/test_ex/sequences/: test_ex-sequences.json
tests/test_data/test_ex/masks/: chr1.bed.bgz  chr10.bed.bgz  chr11.bed.bgz  chr11_KI270721v1_random.bed.bgz  chr12.bed.bgz  chr13.bed.bgz  chr14.bed.bgz  chr14_GL000009v2_random.bed.bgz  chr14_GL000194v1_random.bed.bgz  chr14_GL000225v1_random.bed.bgz  chr14_KI270722v1_random.bed.bgz  chr14_KI270723v1_random.bed.bgz  chr14_KI270724v1_random.bed.bgz  chr14_KI270725v1_random.bed.bgz  chr15.bed.bgz  chr15_KI270727v1_random.bed.bgz  chr16.bed.bgz  chr16_KI270728v1_random.bed.bgz  chr17.bed.bgz
tests/test_exports/test_ex/: test_ex-byacc-bench_region.tsv  test_ex-byacc-full_region.tsv  test_ex-mask.tsv  test_ex-model_lengths.json  test_ex-sequences.json
(+1 files in other folders)
