[package]
name = "te_idx"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.13", features = ["derive"]}
noodles = { version = "*", features = ["bgzf"] }
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
tempfile = "3"
walkdir = "2.5.0"
